simple if statement is working

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Python Interpreter</title>
 </head>
 <body>
-  <input id="input" type="text"></input>
+  <textarea id="input"></textarea>
   <button onclick="submit()">Submit</button>
   <p id="output"></p>
 </body>
